# sbb-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
notebooks/: 001_sbb_queries.ipynb
scripts/: bump_version.py
src/sbb_mcp/: gql_queries.py  main.py  models.py
