[project]
name = "sbb-mcp"
dynamic = ["version"]
description = "An MCP server to interact with SBB.ch"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Guillaume Raille", email = "guillaume.raille@gmail.com" }]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.6.0",
]
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/grll/sbb-mcp"
Repository = "https://github.com/grll/sbb-mcp"

[tool.hatch.version]
path = "src/sbb_mcp/__init__.py"

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
